# seriallm

./: License  README.md  pyproject.toml
src/serial_mcp/: __main__.py  app.py  cli.py  client.py  config.py  mcp_client.py  mcp_server.py  serial_io.py  spawn.py  state.py  terminal.py  tool_executor.py  ws_handler.py  ws_mcp_handler.py
src/seriallm/: __main__.py  app.py  cli.py  client.py  config.py  mcp_client.py  serial_io.py  spawn.py  state.py  terminal.py  tool_executor.py  ws_handler.py  ws_mcp_handler.py
