[project]
name = "seriallm"
version = "0.1.0"
description = "Serial terminal emulator with MCP server for LLM-driven serial port interaction"
readme = "README.md"
license = "MIT"
license-files = ["License"]
requires-python = ">=3.11"
authors = [
    {name = "Nicolas Pouillon"},
]
keywords = ["serial", "mcp", "terminal", "emulator", "pyserial", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "mcp>=1.26",
    "pyserial>=3.5",
    "uvicorn",
    "starlette",
    "anyio",
    "websockets",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/nipo/seriallm"
Repository = "https://github.com/nipo/seriallm"
Issues = "https://github.com/nipo/seriallm/issues"

[project.scripts]
seriallm = "seriallm.cli:main_sync"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
